--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  scoped_model: ^1.1.0
+  provider: ^4.0.5
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +50,7 @@ flutter:
   assets:
     - assets/bg.jpg
     - assets/icon.png
+    - assets/users.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
