--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   scoped_model: ^1.1.0
   provider: ^4.0.5
+  path_provider: ^1.6.7
+  sqflite: ^1.3.0
 
 dev_dependencies:
   flutter_test:
