--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
   provider: ^4.0.5
   path_provider: ^1.6.7
   sqflite: ^1.3.0
+  http: ^0.12.1
+  flutter_spinkit: ^4.1.2+1
+  intl: ^0.16.1
+  font_awesome_flutter: ^8.8.1
+  geolocator: ^5.3.2+2
 
 dev_dependencies:
   flutter_test:
